--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,220 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+  /* box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05); */
+  background-color:#638db5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-area {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* flex-wrap: wrap; */
+  align-items:center;
+  /* max-width: 1200px;
+  min-height: 50px; */
+  /* margin: 0 auto; */
+  /* padding: 0px 0px; */
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
+
+.logo {
+  text-decoration: none;
+  font-size: 25px;
+  color: inherit;
+  margin-right: 20px;
+}
+
+/* menu on desktop */
+.desktop-nav .menus {
+  display: flex;
+  /* align-items: center; */
+  /* flex-wrap: wrap; */
+  list-style: none;
+}
+
+.desktop-nav .menu-items {
+  position: relative;
+  font-size: 15px;
   color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.nav-down .menus{
+  /* display: flex; */
+  /* text-align: center; */
+  color: #638db5;
+  /* align-items: center; */
+  /* flex-wrap: wrap; */
+  /* list-style: none; */
+  /* position: relative;*/
+  margin-left: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.desktop-nav .menu-items a {
+  display: block;
+  font-size: inherit;
+  color: inherit;
+  text-decoration: none;
+}
+
+
+.desktop-nav .menu-items button {
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: inherit;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  width: 100%;
+}
+
+.desktop-nav button span {
+  margin-left: 3px;
+}
+
+.desktop-nav .menu-items > a,
+.desktop-nav .menu-items button {
+  text-align: left;
+  padding: 0.7rem 1rem;
+}
+
+.desktop-nav .menu-items a:hover,
+.desktop-nav .menu-items button:hover {
+  background-color: #c0bcbc;
+}
+
+.desktop-nav .arrow::after {
+  content: "";
+  display: inline-block;
+  margin-left: 0.28em;
+  vertical-align: 0.09em;
+  border-top: 0.42em solid;
+  border-right: 0.32em solid transparent;
+  border-left: 0.32em solid transparent;
+}
+
+.desktop-nav .dropdown {
+  position: absolute;
+  right: 0;
+  left: auto;
+  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
+    0 4px 6px -2px rgba(71, 63, 79, 0.16);
+  font-size: 0.875rem;
+  z-index: 9999;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  list-style: none;
+  background-color: #070707;
+  border-radius: 0.5rem;
+  display: none;
+}
+
+.desktop-nav .dropdown.show {
+  display: block;
+}
+
+.desktop-nav .dropdown .dropdown-submenu {
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+
+.mobile-nav {
+  display: none;
+}
+
+/* menu on mobile */
+@media screen and (max-width: 960px) {
+  .nav-area {
+    justify-content: space-between;
   }
-  to {
-    transform: rotate(360deg);
+
+  .desktop-nav {
+    /* display: none; */
+    text-align:left;
   }
+}
+
+.card {
+  box-shadow: 0 8px 8px 0 rgba(236, 229, 229, 0.2);
+  margin: 30px;
+  /* max-width: 100%; */
+  /* display: flex;
+  flex-wrap: wrap; */
+  /* justify-content:space-between; */
+}
+.card-body{
+  box-shadow: 0 4px 8px 0 rgba(237, 234, 234, 0.2);
+  background-color:white;
+  /* flex-wrap: wrap; */
+ 
+}
+
+.card-text{
+  font-weight: bold;
+}
+.card-header{
+  font-weight: bold;
+  /* flex-wrap: wrap; */
+  text-align: left;
+}
+
+.dInput{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:space-between;
+  align-items:center;
+  width:100%;
+  margin-top: 10px;
+}
+
+.dInput label {
+  /* text-align:center; */
+  display: block;
+  /* padding: 6px; */
+  /* font-weight: bold; */
+  color: #070707;
+  width: 30ch;
+}
+
+.dInput input {
+  padding: 5px;
+  background-color: #FFFFFF;
+  width: 100%;
+  border-radius: 2px;
+}
+
+
+
+/* th,td{
+  border-collapse: collapse;
+  border: 2px solid black;
+  text-align: center;
+}  */
+
+.nav-down{
+  background-color: #F5F5F5;
+  margin: 0px;
+  /* text-align: left; */
+  /* color: white; */
+}
+
+.profile{
+  color: white;
+  background-color:#638db5 ;
+  position: absolute;
+  right: 0;
+  padding-right: 50px;
+  font-size: 15px;
+ 
+
 }
